# backend/controllers/post-controller.js
@@ -1,8 +1,8 @@
 const createError = require('http-errors')
-const { Post } = require('../models')
+const { Post,Profile } = require('../models')
 
 exports.list = (req, res, next) => Promise.resolve()
-  .then(() => Post.find({}))
+  .then(() => Post.find({profile:req.user.profile._id}).populate('comments').populate('profile'))
   .then((data) => (req.accepts(['html', 'json']) === 'json')
     ? res.json(data)
     : res.send({ posts: data })
@@ -11,17 +11,14 @@ exports.list = (req, res, next) => Promise.resolve()
 
 exports.add = (req, res, next) => Promise.resolve()
   .then(console.log(`${req.body} e ${req.user}`))
-  .then(() => new Post({...req.body, user : req.user._id}).save())
+  .then(() => new Post({...req.body, profile : req.user.profile._id}).save())
   .then((data) => {
     res.status(201).end()
-    //res.redirect(`/v1/posts/${data._id}`)
   })
   .catch(err => next(err))
 
 exports.show = (req, res, next) => Promise.resolve()
-  .then(() => Post.findById(req.params.id).populate({
-    path: 'comments'
-  }))
+  .then(() => Post.findById(req.params.id).populate('comments').populate('profile'))
   .then((data) => {
     if (data) {
       (req.accepts(['html', 'json']) === 'json')
@@ -34,13 +31,8 @@ exports.show = (req, res, next) => Promise.resolve()
   .catch(err => next(err))
 
 exports.save = (req, res, next) => Promise.resolve()
-  .then(() => Post.findByIdAndUpdate(req.params.id, req.body, {
-    runValidators: true
-  }))
-  .then((data) => {
-    res.status().end()
-    res.redirect(`/v1/posts/${req.params.id}`)
-  })
+  .then(() => Post.findByIdAndUpdate(req.params.id, req.body, {runValidators: true}))
+  .then((data) => res.status(203).json(data))
   .catch(err => next(err))
 
 exports.delete = (req, res, next) => Promise.resolve()
@@ -65,4 +57,16 @@ exports.new = (req, res, next) => Promise.resolve()
   .then((data) => {
     res.send({ post: new Post({...res.locals.post, user:req.user._id}) })
   }).status(201)
+  .catch(err => next(err))
+
+/**
+ * 
+ * @route POST /posts/{id}/like 
+ * @param {string} id.path.require 
+ * @group Post 
+ * @security JWT 
+ */  
+exports.like = (req, res, next) => Promise.resolve()
+  .then(()=> Post.findOneAndUpdate({_id: req.params.id},{$push: {likes:req.user.profile._id}}))
+  .then((data)=> res.status(203).json(data))
   .catch(err => next(err))
